--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT=4000
-MONGO_URL="mongodb://yessminbouchehed:14429683@ac-sgjybnm-shard-00-00.g6mofhj.mongodb.net:27017,ac-sgjybnm-shard-00-01.g6mofhj.mongodb.net:27017,ac-sgjybnm-shard-00-02.g6mofhj.mongodb.net:27017/stylike?ssl=true&replicaSet=atlas-14osx4-shard-0&authSource=admin&retryWrites=true&w=majority&appName=Cluster0"
+MONGO_URL="mongodb://yessminbouchehed:14429683@ac-sgjybnm-shard-00-00.g6mofhj.mongodb.net:27017,ac-sgjybnm-shard-00-01.g6mofhj.mongodb.net:27017,ac-sgjybnm-shard-00-02.g6mofhj.mongodb.net:27017/?ssl=true&replicaSet=atlas-14osx4-shard-0&authSource=admin&retryWrites=true&w=majority&appName=Cluster0"
 CLDN_NAME="de8nt6hm5"
 CLDN_API_KEY="593242129226332"
 CLDN_SECRET_KEY="bCF5Hq0Mr3lChHVVs_xTVu9RB-4"
